ui/components/form-element/animate/_index.scss
/* stylelint-disable selector-class-pattern */
// Copyright (c) 2015-present, salesforce.com, inc. All rights reserved
// Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license


/**
 * @summary Custom animation with label on input focus
 *
 * @name animate
 * @selector .nds-form-element__control-animated-label
 * @restrict .nds-form-element__control
 * @variant
 */
.nds-form-element__control-animated-label {
  font-size: .875rem;
  position: relative;
}

.nds-form-element__label {
  color: $color-input-font-kashmiri-blue;
}

.nds-input {
  font-size: .875rem;
  letter-spacing: 1px;
  font-weight: 400;
}

input[placeholder]::placeholder {
  /* stylelint-disable declaration-no-important */
  font-size: $form-placeholder-font-size;
  color: transparent !important;
  font-weight: $form-placeholder-weight;
  /* stylelint-enable declaration-no-important */
}

.nds-form-element__control.nds-form-element__control-animated-label {

  .nds-form-element__label {
    top: .25rem;
    #{$left}: 0;
    position: absolute;
    width: 100%;
    #{$right}: 0;
    pointer-events: none;

    .nds-button_icon {
      border: 0;
    }
  }

  .nds-form-element__icon  {
    vertical-align: text-bottom;
  }

  label {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-weight: $form-label-pre-animate-font-weight;
    font-size: $form-label-pre-animate-font-size;
    letter-spacing: 1px;
    color: $color-input-font-kashmiri-blue;
    padding: 0 .5rem 0 0;
  }

  input:focus,
  input.nds-has-value:not(:focus):valid,
  input[cloned='dirty'],
  input.nds-input[cloned='dirty'],
  input.nds-is-dirty.nds-not-empty,
  select:focus,
  select.nds-has-value:not(:focus):valid,
  select[cloned='dirty'],
  select.nds-select[cloned='dirty'],
  textarea:focus,
  textarea.nds-has-value:not(:focus):valid,
  textarea.nds-not-empty.nds-is-dirty,
  textarea[cloned="dirty"],
  input.ng-dirty.ng-not-empty,
  input.nds-input.ng-dirty.ng-not-empty.ng-touched[vlc-nds-lookup-control],
  input.ng-touched.ng-not-empty.td-input
  select.ng-dirty.ng-not-empty,
  select.nds-select.ng-dirty.ng-not-empty.ng-touched[vlc-nds-lookup-control]
  textarea.ng-not-empty.ng-dirty {

    ~.nds-form-element__label,
    +.nds-form-element__label {
      transform: translate3d(0, -1.2rem, 0);
      transition-duration: 300ms;
      z-index: 0;
      top: .4rem;
      #{$left}: 0;
    }

    ~.nds-form-element__label label,
    ~label.nds-form-element__label,
    +.nds-form-element__label label,
    +label.nds-form-element__label {
      font-size: $form-label-font-size;
      font-weight: $form-label-font-weight;
      padding: 0 .5rem 0 0;
    }
  }

  input:focus~.nds-form-element__label,
  input:focus~.nds-form-element__label .nds-required,
  select:focus~.nds-form-element__label,
  select:focus~.nds-form-element__label .nds-required,
  textarea:focus~.nds-form-element__label {
    color: $color-border-input-active;
  }
}


.nds-form-element__control.nds-input-has-icon svg.nds-icon {
  fill: $color-input-icon-blue-hue;
}


.nds-form-element__control.nds-input-has-icon.nds-input-has-icon_left.nds-form-element__control-animated-label .nds-form-element__label,
.nds-form-element__control.nds-input-has-icon.nds-input-has-icon_left-right.nds-form-element__control-animated-label .nds-form-element__label {
  #{$left}: 1.25rem;
}


.nds-form-element__control.nds-input-has-icon.nds-input-has-icon_left.nds-form-element__control-animated-label input:focus~label,
.nds-form-element__control.nds-input-has-icon.nds-input-has-icon_left-right.nds-form-element__control-animated-label input:focus~label,
.nds-form-element__control.nds-input-has-icon.nds-input-has-icon_left.nds-form-element__control-animated-label input:not(:focus):valid~label {
  #{$left}: 0;
}

.nds-form-element__control.nds-form-element__control-animated-label input[readonly]~label {
  transform: translate3d(0, -1.2rem, 0);
  top: .4rem;
  #{$left}: 0;
}

.nds-form-element__control.nds-form-element__control-animated-label input[type="email"].ng-dirty.ng-invalid,
.nds-form-element__control.nds-form-element__control-animated-label input[type="password"].ng-dirty.ng-invalid,
.nds-form-element__control.nds-form-element__control-animated-label input[type="tel"].ng-dirty.ng-invalid,
.nds-form-element__control.nds-form-element__control-animated-label input[type="text"].ng-dirty.ng-invalid,
.nds-form-element__control.nds-form-element__control-animated-label input[type="url"].ng-dirty.ng-invalid,
.nds-form-element__control.nds-form-element__control-animated-label textarea.ng-dirty.ng-invalid {
  border-bottom: 1px solid $color-border-error;
  border-image: initial;
}

.nds-form-element__control.nds-form-element__control-animated-label input[type="text"].ng-dirty.ng-valid.ng-not-empty+label span,
.nds-form-element__control.nds-form-element__control-animated-label input[type="email"].ng-dirty.ng-valid.ng-not-empty+label span,
.nds-form-element__control.nds-form-element__control-animated-label input[type="password"].ng-dirty.ng-valid.ng-not-empty+label span,
.nds-form-element__control.nds-form-element__control-animated-label input[type="url"].ng-dirty.ng-valid.ng-not-empty+label span,
.nds-form-element__control.nds-form-element__control-animated-label input[type="tel"].ng-dirty.ng-valid.ng-not-empty+label span,
.nds-form-element__control.nds-form-element__control-animated-label textarea.ng-dirty.ng-valid.ng-not-empty+label span {
  color: $color-valid-control;
}

.nds-has-error .nds-form-element__help {
  letter-spacing: 1px;
  color: $color-border-error;
  font-size: .75rem;
  font-weight: 400;
  text-transform: capitalize;
  margin-top: .625rem;
}

.nds-form-element__control-animated-label .nds-control-action__container {
  top: .25rem;
}

.nds-control-action__container svg[disabled="disabled"] {
  pointer-events: none;
  opacity: .5;
}

.nds-form-element__control-animated-label+.nds-form-element__control-help,
.nds-form--multi-input__container+.nds-form-element__control-help,
.nds-select-wrapper+.nds-form-element__control-help {
  visibility: hidden;
  opacity: 0;
  margin-top: -2px;
  transition: visibility 2s, opacity .5s linear;
  position: absolute;
}

.nds-input__tooltip .nds-form-element__control-help.nds-helptext-focus {
  visibility: visible;
  opacity: 1;
}

.nds-form-element__control-animated-label .nds-input:disabled+label {
  opacity: .5;
}

.nds-form-container {
  margin-bottom: .5rem;
  padding: .75rem;
}

.nds-form-container .nds-form-element__control-animated-label {
  width: 100%;
}

.nds-input_mask:focus::placeholder {
  /* stylelint-disable declaration-no-important */
  color: inherit !important;
  /* stylelint-enable declaration-no-important */
}

textarea[placeholder]::placeholder {
  color: transparent;
  font-weight: $form-placeholder-weight;
}

textarea:focus::placeholder {
  color: inherit;
}

.nds-form-element__control.nds-form-element__control-animated-label .nds-animated-label__ease-out {
  transition: transform 200ms ease-out, font-size 200ms ease-out;
}

.nds-combobox_container .nds-combobox__form-element.nds-form-element__control.nds-form-element__control-animated-label input[readonly] {
  padding-left: 0;

  &:focus {
    box-shadow: none;

    ~ label {
      transform: translate3d(0, -1.2rem, 0);
    }
  }

  ~ label {
    transform: none;
  }

  &.nds-input.nds-not-empty.nds-is-dirty ~ label {
    transform: translate3d(0, -1.2rem, 0);
  }
}

.input-parent-div .nds-form-element__control-animated-label .nds-form-element__label label{
  display: inline-block;
  max-width: calc(100% - .875rem);
}
.date-picker-parent-div .nds-form-element__control-animated-label .nds-form-element__label label,
.combobox-parent-div .nds-form-element__control-animated-label .nds-form-element__label label{
  display: inline-block;
  max-width: calc(80% - .875rem);
}

.nds-form-element__control.nds-form-element__control-animated-label .nds-animated-label__ease-out .nds-tooltip__container{
  top: -2px;
}
/* stylelint-enable selector-class-pattern */

